# wrts

./: .gitignore  Cargo.toml  Makefile.toml  SETTINGS.json
wrts/: Cargo.toml
wrts/benches/: bench.rs
wrts/src/: generated_bullet_problem_solution.rs  in_match.rs  input_handling.rs  lib.rs  main.rs  math_utils.rs  networking.rs  ship.rs
wrts/src/ui/: in_game.rs  lobby.rs  main_menu.rs  mod.rs
wrts_lobby/: .gitignore  Cargo.toml
wrts_lobby/src/: clients.rs  main.rs  match_handler.rs  temp_dir.rs
wrts_match/: Cargo.toml
wrts_match/src/: detection.rs  initialize_game.rs  lib.rs  main.rs  networking.rs  ship.rs  spawn_entity.rs
wrts_match/src/math_utils/: generated_bullet_problem_solution.rs  mod.rs
wrts_match_shared/: Cargo.toml
wrts_match_shared/src/: lib.rs  math.rs  ship_template.rs
wrts_match_shared/src/formulas/: mod.rs
wrts_match_shared/src/ship_template/: germany.rs  japan.rs  mod.rs  russia.rs  sweden.rs
wrts_messaging/: Cargo.toml
wrts_messaging/src/: lib.rs
