[package]
name = "wrts"
version = "0.1.0"
edition = "2024"

[dependencies]
wrts_messaging = { path = "../wrts_messaging" }
wrts_match_shared = { path = "../wrts_match_shared" }

bevy = { version = "0.16.1", features = ["track_location", "serialize"] }
enum-map = { version = "2.7.3", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
itertools = "0.14.0"
ordered-float = "5.0.0"
rand = "0.9.1"
rand_distr = "0.5.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

divan = "0.1.21"
wtransport = { version = "0.6.1", features = ["dangerous-configuration"] }
anyhow = "1.0.99"
slotmap = "1.0.7"
tokio = { version = "1.47.1", features = ["rt", "sync"] }
num-complex = "0.4.6"
bevy_simple_text_input = "0.11.1"
# leafwing-input-manager = "0.17.1"

[[bench]]
name = "bench"
harness = false
