[package]
name = "wrts_messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
wrts_match_shared = { path = "../wrts_match_shared" }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
glam = { version = "0.29.3", features = ["serde"] }
serde_json = "1.0.142"
wtransport = { version = "0.6.1" }

tokio = { version = "1.47.1", default-features = false, features = [
    "process",
    "rt",
] }
pin-project = "1.1.10"
slotmap = "1.0.7"
